# learn-ai-fundamentals

./: .env  .gitignore  11-parameters.md  14-llm-frameworks.md  404.html  README.md  index.html  mkdocs.yml  nav.yml  pyproject.toml  sitemap.xml  styles.css
.github/workflows/: deploy.yml
01-setup-python/: index.html
02-setup-git/: index.html
03-setup-cursor/: index.html
04-setup-uv/: index.html
05-setup-project/: index.html
06-setup-ollama/: index.html
07-setup-openai/: index.html
08-models/: index.html
09-chat-completions/: index.html
10-transformers/: index.html
11-parameters/: index.html
12-tokens/: index.html
13-context-windows/: index.html
14-llm-frameworks/: index.html
assets/css/: styles.css
basics/chat-completions/: index.html
basics/context-windows/: index.html
basics/llm-frameworks/: index.html
basics/models/: index.html
basics/parameters/: index.html
basics/tokens/: index.html
basics/transformers/: index.html
core-concepts/chat-completions/: index.html
core-concepts/context-windows/: index.html
core-concepts/llm-frameworks/: index.html
core-concepts/models/: index.html
core-concepts/parameters/: index.html
core-concepts/tokens/: index.html
core-concepts/transformers/: index.html
core/08-models/: index.html
core/09-chat-completions/: index.html
core/10-transformers/: index.html
docs/: .pages  01-setup-python.md  02-setup-git.md  03-setup-cursor.md  06-setup-ollama.md  09-chat-completions.md  14-llm-frameworks.md  index.md  nav.yml  styles.css
docs/basics/: .pages  (+3 more)
search/: search_index.json
(+91 files in other folders)
