[project]
name = "learn-ai-fundamentals"
version = "0.1.0"
description = "Learn Artificial Intelligence by Building LLM apps and enhancing them with RAG, LoRA and AI Agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "bs4>=0.0.2",
    "litellm>=1.82.2",
    "mkdocs<2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs-material>=9.7.5",
    "ollama>=0.6.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
